// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on no click displays the reasons 1`] = `
.c4 {
  background-color: transparent;
  font-size: 1.0714285714285714rem;
  padding-right: 1.7142857142857142rem;
  padding-left: 1.7142857142857142rem;
  min-width: 0;
  padding: 0.5714285714285714rem 1rem;
  border-radius: 1.1428571428571428rem;
  border-width: 0.07142857142857142rem;
  white-space: normal;
  line-height: 1.3;
}

.c2 {
  margin: 0 auto;
  width: 85%;
}

.c3 {
  margin-bottom: 0.7142857142857143rem;
  width: 100%;
}

.c5 {
  width: 100%;
}

.c0 {
  background-color: #fff;
  box-shadow: 0 0.14285714285714285rem 1.1428571428571428rem 0 rgba(#000,0.26);
  padding: 1.1428571428571428rem 0;
}

.c1 {
  text-align: center;
  margin-bottom: 0.7142857142857143rem;
  font-size: 0.9285714285714286rem;
  font-weight: normal;
  color: #333;
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Please tell us why.
    </h3>
    <div
      class="c2"
    >
      <button
        class="c3 c4"
        data-testid="pill-button"
      >
        It's related, but it didn't answer my question
      </button>
      <button
        class="c5 c4"
        data-testid="pill-button"
      >
        It's not related to my question
      </button>
    </div>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
.c2 {
  background-color: transparent;
  font-size: 1.0714285714285714rem;
  padding-right: 1.7142857142857142rem;
  padding-left: 1.7142857142857142rem;
  min-width: 0;
  padding: 0.5714285714285714rem 1rem;
  border-radius: 1.1428571428571428rem;
  border-width: 0.07142857142857142rem;
  white-space: normal;
  line-height: 1.3;
}

.c0 {
  background-color: #fff;
  box-shadow: 0 0.14285714285714285rem 1.1428571428571428rem 0 rgba(#000,0.26);
  padding: 1.1428571428571428rem 0;
}

.c1 {
  text-align: center;
  margin-bottom: 0.7142857142857143rem;
  font-size: 0.9285714285714286rem;
  font-weight: normal;
  color: #333;
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Does this article answer your question?
    </h3>
    <div
      class="container buttonCenter "
    >
      <button
        class="c2"
        data-testid="pill-button"
      >
        Yes
      </button>
      <button
        class="c2"
        data-testid="pill-button"
      >
        No, I need help
      </button>
    </div>
  </div>
</div>
`;
